# svelte-lexical

./: .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.json  .stackblitzrc  CLAUDE.md  LICENSE  README.md  codebook.toml  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vim-keys.md
.github/workflows/: build.yml  npm-publish-github-packages.yml  npm-publish.yml  size.yml  tests.yml
demos/persistent-editor/: README.md  index.html  package.json  tsconfig.node.json
demos/plaintext-editor/: README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json
demos/playground/: index.html  package-lock.json  package.json  playwright.config.ts  split.html  svelte.config.js  tsconfig.json  vite.config.ts
demos/playground-lite/: README.md  package.json  playwright.config.ts  vite.config.ts
demos/qalam/: README.md  index.html  package.json  svelte.config.js  tsconfig.json  tsconfig.node.json  vite.config.js
demos/qalam/src-tauri/: Cargo.toml  tauri.conf.json
demos/qalam/src-tauri/capabilities/: default.json
demos/qalam/src-tauri/src/: lib.rs  main.rs
demos/richtext-editor/: .eslintrc.js  index.html  package-lock.json  package.json  rollup.config.js  vite.config.js
demos/richtext-editor-basic/: package-lock.json  package.json  rollup.config.js
demos/richtext-editor-simple/: README.md
demos/sveltekit/: .eslintrc.cjs  README.md  package.json  (+2 more)
docs/: collaboration.md  decorator-node.md  development-notes.md  porting-lexical-plugins.md  testing.md  upgrading-lexical.md
(+155 files in other folders)
